screens/gallery/src/styles.module.scss
@import '~@micromag/core/scss/placeholders';

.container {
    @extend %screen;

    .grid {
        position: relative;
        height: 100%;
    }

    .placeholder {
        height: 100%;
    }

    .emptyImage,
    .emptyCaption {
        @extend %empty;
        width: 100%;
    }

    .emptyImage {
        height: 100%;
    }

    .emptyCaption {
        height: 50px;
        margin-top: 10px;
    }

    .gridItem {
        display: flex;
        position: relative;
        flex-direction: column;
        height: 100%;
    }

    .imageContainer {
        position: relative;
        flex-grow: 1;
    }

    .callToAction {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        transition: transform 0.2s ease-out;
    }

    .image {
        @extend %fullscreen;
    }

    .caption {
        padding: 10px 0;
    }

    .content {
        @extend %fullscreen;
        transition: padding-bottom 0.2s ease-out;
    }
}

